<resources>
    <string name="app_name">NoteKeeper</string>
    <string name="add_note">Add Note</string>
    <string name="save_note">Save Note</string>
    <string name="delete_note">Delete Note</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="delete">DELETE!</string>
    <string name="delete_message">Are you sure you want to delete this Note?</string>
    <string name="hanan">https://lottiefiles.com/user/137752</string>
    <string name="note">Note</string>
    <string name="keeper">Keeper</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="new_note_description">You have no notes, click to add a new note</string>
</resources>