<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.segunfrancis.notekeeper.ui.auth.OnBoardingFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/note_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/note"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline2.TitleText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/keeper_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/keeper"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline2.TitleText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/note_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_button"
        style="@style/Widget.MaterialComponents.Button.MainButton"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginBottom="@dimen/default_margin"
        android:text="@string/login"
        app:layout_constraintBottom_toTopOf="@id/register_button"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineStart" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/register_button"
        style="@style/Widget.MaterialComponents.Button.MainButton"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="@id/guidelineBottom"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineStart" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/default_margin" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/default_margin" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/default_margin" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="@dimen/default_margin" />
</androidx.constraintlayout.widget.ConstraintLayout>